<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
   <TextView
       android:id="@+id/tv_xuanhuan"
       android:gravity="left|center_vertical"
       android:padding="10dp"
       android:layout_marginTop="10dp"
       android:background="@drawable/selector_sort_text_bg"
       android:text="@string/xuanhuan"
       android:textSize="14sp"
       android:clickable="true"
       android:textColor="@color/main_color"
       android:drawableRight="@mipmap/go"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

   <TextView
       android:id="@+id/tv_xiuzhen"
       android:gravity="left|center_vertical"
       android:padding="10dp"
       android:layout_marginTop="4dp"
       android:background="@drawable/selector_sort_text_bg"
       android:clickable="true"
       android:text="@string/xiuzhen"
       android:textSize="14sp"
       android:textColor="@color/main_color"
       android:drawableRight="@mipmap/go"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

   <TextView
       android:id="@+id/tv_dushi"
       android:gravity="left|center_vertical"
       android:padding="10dp"
       android:layout_marginTop="4dp"
       android:background="@drawable/selector_sort_text_bg"
       android:clickable="true"
       android:text="@string/dushi"
       android:textSize="14sp"
       android:textColor="@color/main_color"
       android:drawableRight="@mipmap/go"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

   <TextView
       android:id="@+id/tv_lishi"
       android:gravity="left|center_vertical"
       android:padding="10dp"
       android:layout_marginTop="4dp"
       android:background="@drawable/selector_sort_text_bg"
       android:clickable="true"
       android:text="@string/lishi"
       android:textSize="14sp"
       android:textColor="@color/main_color"
       android:drawableRight="@mipmap/go"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

   <TextView
       android:id="@+id/tv_wangyou"
       android:gravity="left|center_vertical"
       android:padding="10dp"
       android:layout_marginTop="4dp"
       android:background="@drawable/selector_sort_text_bg"
       android:clickable="true"
       android:text="@string/wangyou"
       android:textSize="14sp"
       android:textColor="@color/main_color"
       android:drawableRight="@mipmap/go"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

   <TextView
       android:id="@+id/tv_kehuan"
       android:gravity="left|center_vertical"
       android:padding="10dp"
       android:layout_marginTop="4dp"
       android:background="@drawable/selector_sort_text_bg"
       android:clickable="true"
       android:text="@string/kehuan"
       android:textSize="14sp"
       android:textColor="@color/main_color"
       android:drawableRight="@mipmap/go"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

   <TextView
       android:id="@+id/tv_kongbu"
       android:gravity="left|center_vertical"
       android:padding="10dp"
       android:layout_marginTop="4dp"
       android:background="@drawable/selector_sort_text_bg"
       android:clickable="true"
       android:text="@string/kongbu"
       android:textSize="14sp"
       android:textColor="@color/main_color"
       android:drawableRight="@mipmap/go"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

   <TextView
       android:id="@+id/tv_quanben"
       android:gravity="left|center_vertical"
       android:padding="10dp"
       android:layout_marginTop="4dp"
       android:background="@drawable/selector_sort_text_bg"
       android:clickable="true"
       android:text="@string/quanben"
       android:textSize="14sp"
       android:textColor="@color/main_color"
       android:drawableRight="@mipmap/go"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
   <TextView
       android:id="@+id/tv_paihangbang"
       android:gravity="left|center_vertical"
       android:padding="10dp"
       android:layout_marginTop="4dp"
       android:background="@drawable/selector_sort_text_bg"
       android:clickable="true"
       android:text="@string/rank"
       android:textSize="14sp"
       android:textColor="@color/main_color"
       android:drawableRight="@mipmap/go"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
</LinearLayout>